# Synaxi-projection

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/agents/: synaxi-worker.md
data/: .gitignore  benchmark_annotation_results.jsonl  projection_results.jsonl
data/conversation_history/: 20260627T063320349730Z-e7ee56f9__baseline__t2_binary_search__ollama__gemma4_latest.json  20260627T063424503245Z-bc175356__baseline__t2_binary_search__ollama__gemma4_latest.json  20260627T063527634617Z-dc7c1336__projection__t2_binary_search__ollama__gemma4_latest.json  20260627T064018909710Z-fc8b9678__projection__t2_binary_search__ollama__gemma4_latest.json  20260627T064133026150Z-dc3f4262__projection__t2_binary_search__ollama__gemma4_latest.json  20260627T064621433660Z-dbaed411__projection__t2_binary_search__ollama__gemma4_latest.json  20260627T065015985742Z-089c7858__projection__t2_binary_search__ollama__gemma4_latest.json  20260627T065054050882Z-2420c947__projection__t2_event_emitter__ollama__gemma4_latest.json  20260627T065131007986Z-bbdf42e7__projection__t2_linked_list__ollama__gemma4_latest.json  20260627T065322862493Z-ea76feaa__projection__t2_lru_cache__ollama__gemma4_latest.json  20260627T065429513002Z-7b478096__projection__t3_async_rate_limiter__ollama__gemma4_latest.json  20260627T065507927419Z-baa86f17__projection__t3_concurrent_bounded_buffer__ollama__gemma4_latest.json  20260627T065549386983Z-6a9da0f1__projection__t3_diff_engine__ollama__gemma4_latest.json  20260627T065723173901Z-cc18754c__projection__t3_lfu_cache__ollama__gemma4_latest.json  20260627T070036980849Z-3ae1e2f0__projection__t3_mini_interpreter__ollama__gemma4_latest.json  20260627T070114451625Z-aa2565fd__projection__t3_persistent_queue__ollama__gemma4_latest.json  20260627T070352669309Z-127c950e__projection__t3_trie_autocomplete__ollama__gemma4_latest.json  20260627T070530969011Z-5d7bcd2e__projection__t4_btree__ollama__gemma4_latest.json  (+375 more)
docs/: RESULTS.md
harness/: __init__.py  agent.py  conftest.py  evaluator.py  recorder.py  runner.py
scripts/: analyze_results.py  run_suite.py  suite_status.py
synaxi_projection/: _proxy_server.py  benchmark.py  cli.py  projection.py  proxy.py  sandbox.py  shim.py  wrapper.py
tests/: test_cache_aware.py  test_loop_detection.py  test_operational_memory.py  test_prefix_stable.py  test_proxy_concurrency_e2e.py  test_proxy_streaming.py  test_proxy_thrash_e2e.py  test_tools_null.py  test_tools_preserved.py  test_worker_gate.py  test_world_budget.py  test_wrap_agent.py  test_wrap_settings.py
(+116 files in other folders)
