[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synaxi-projection"
version = "0.1.0"
description = "Projection-only wrapper and benchmark tooling for Claude Code style agent runs"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
synaxi-projection = "synaxi_projection.cli:main"
synaxi-projection-benchmark = "synaxi_projection.benchmark:main"
synaxi-proxy = "synaxi_projection.proxy:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["synaxi_projection*", "harness*"]
